接口简化登录和注册